--- a/pages/cadastrar_responsavel_financeiro.html
+++ b/pages/cadastrar_responsavel_financeiro.html
@@ -30,67 +30,47 @@
                     <li>
                         <a href="./area_usuario_home.html">Início</a>
                     </li>
-                <li>
-                    <a>Cadastrar</a>
-                    <ul>
-                        <li>
-                            <a href="./cadastrar_curso.html">Curso</a>
-                        </li>
-                        <li>
-                            <a href="./cadastrar_modulo.html">Módulo</a>
-                        </li>
-                        <li>
-                            <a href="./cadastrar_uc.html">Unidade Curricular</a>
-                        </li>
-                        <li>
-                            <a href="./cadastrar_turma.html">Turma</a>
-                        </li>
-                        <li>
-                            <a href="./cadastrar_aluno.html">Aluno</a>
-                        </li>
-                        <li>
-                            <a href="./cadastrar_professor.html">Professor</a>
-                        </li>
-                        <li>
-                            <a href="./cadastrar_cronograma.html">Cronograma</a>
-                        </li>
-                        <li>
-                            <a href="./cadastrar_professor_uc.html">Professor em UC</a>
-                        </li>
-                        <li>
-                            <a href="./cadastrar_aluno_turma.html">Aluno em Turma</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="./cronogramas.html">Cronogramas</a>
-                </li>
-                <li>
-                    <a>Alterar</a>
-                    <ul>
-                        <li>
-                            <a href="./alterar_curso.html">Curso</a>
-                        </li>
-                        <li>
-                            <a href="./alterar_modulo.html">Módulo</a>
-                        </li>
-                        <li>
-                            <a href="./alterar_uc.html">Unidade Curricular</a>
-                        </li>
-                        <li>
-                            <a href="./alterar_turma.html">Turma</a>
-                        </li>
-                        <li>
-                            <a href="./alterar_aluno.html">Aluno</a>
-                        </li>
-                        <li>
-                            <a href="./alterar_professor.html">Professor</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="../index.html">Sair</a>
-                </li>
+                    <li>
+                        <a>Cadastrar</a>
+                        <ul>
+                            <li>
+                                <a href="./cadastrar_curso.html">Curso</a>
+                            </li>
+                            <li>
+                                <a href="./cadastrar_modulo.html">Módulo</a>
+                            </li>
+                            <li>
+                                <a href="./cadastrar_uc.html">Unidade Curricular</a>
+                            </li>
+                            <li>
+                                <a href="./cadastrar_turma.html">Turma</a>
+                            </li>
+                            <li>
+                                <a href="./cadastrar_aluno.html">Aluno</a>
+                            </li>
+                            <li>
+                                <a href="./cadastrar_professor.html">Professor</a>
+                            </li>
+                            <li>
+                                <a href="./cadastrar_cronograma.html">Cronograma</a>
+                            </li>
+                            <li>
+                                <a href="./cadastrar_professor_uc.html">Professor em UC</a>
+                            </li>
+                            <li>
+                                <a href="./cadastrar_aluno_turma.html">Aluno em Turma</a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <a href="./cronogramas.html">Cronogramas</a>
+                    </li>
+                    <li>
+                        <a href="./ver_alterar.html">Alterar</a>
+                    </li>
+                    <li>
+                        <a href="../index.html">Sair</a>
+                    </li>
                 </ul>
             </nav>
             <hr id="hr2" />
