--- a/pages/cadastrar_professor.html
+++ b/pages/cadastrar_professor.html
@@ -66,27 +66,7 @@
                     <a href="./cronogramas.html">Cronogramas</a>
                 </li>
                 <li>
-                    <a>Alterar</a>
-                    <ul>
-                        <li>
-                            <a href="./alterar_curso.html">Curso</a>
-                        </li>
-                        <li>
-                            <a href="./alterar_modulo.html">Módulo</a>
-                        </li>
-                        <li>
-                            <a href="./alterar_uc.html">Unidade Curricular</a>
-                        </li>
-                        <li>
-                            <a href="./alterar_turma.html">Turma</a>
-                        </li>
-                        <li>
-                            <a href="./alterar_aluno.html">Aluno</a>
-                        </li>
-                        <li>
-                            <a href="./alterar_professor.html">Professor</a>
-                        </li>
-                    </ul>
+                    <a href="./ver_alterar.html">Alterar</a>
                 </li>
                 <li>
                     <a href="../index.html">Sair</a>
