--- a/pages/cronogramas.html
+++ b/pages/cronogramas.html
@@ -67,27 +67,7 @@
                     <a href="./cronogramas.html">Cronogramas</a>
                 </li>
                 <li>
-                    <a>Alterar</a>
-                    <ul>
-                        <li>
-                            <a href="./alterar_curso.html">Curso</a>
-                        </li>
-                        <li>
-                            <a href="./alterar_modulo.html">Módulo</a>
-                        </li>
-                        <li>
-                            <a href="./alterar_uc.html">Unidade Curricular</a>
-                        </li>
-                        <li>
-                            <a href="./alterar_turma.html">Turma</a>
-                        </li>
-                        <li>
-                            <a href="./alterar_aluno.html">Aluno</a>
-                        </li>
-                        <li>
-                            <a href="./alterar_professor.html">Professor</a>
-                        </li>
-                    </ul>
+                    <a href="./ver_alterar.html">Alterar</a>
                 </li>
                 <li>
                     <a href="../index.html">Sair</a>
@@ -184,9 +164,9 @@
                                     </div>
                                 </fieldset>
                                 <article id="articleButtonCadCronograma">
-                                    <p class="pCenter" id="btns"><button type="submit" class="botao" id="btnBuscar" name="btnBuscarCronograma">Buscar</button></p>
+                                    <p class="pCenter" id="btns"><button type="submit" class="botao3" id="btnBuscar" name="btnBuscarCronograma">Buscar</button></p>
                                 </article>
-                                <fieldset id="bloco2">
+                                <fieldset id="bloco2_cronogramas">
                                     <div class="dados_table">
                                         <table id="cronogramas">
                                             <caption>
